# Chronos_High_Frequency_Trading_Engine

./: .dockerignore  .gitignore  Architecture.md  CLAUDE.md  CMakeLists.txt  CMakelists.txt  Detailed_Roadmap 2.md  Detailed_Roadmap.md  Detailed_Roadmap_UI.md  Dockerfile  GEMINI.md  LICENSE  MONOREPO.md  README.md  chronos-hft-roadmap.md  finnhub_integration.md
.github/workflows/: ci.yml  codeql.yml
Plan/: Plan for bridge  task-1-1-core-structs.md  task-1-2-memory-pool.md  task-1-3-strong-types.md  task-2-1-price-level.md  task-2-2-lob-logic.md  task-2-3-matching-logic copy.md  task-3-1-zmq-gateway.md  task-3-2-onnx-integration.md  task-3-3-static-risk.md  task-4-1-publication.md  task-4-2-audit-logger.md  task-5-1-cpu-pinning.md  task-5-2-performance.md  task-5-3-sharding.md  task-6-distribution.md  task-7-1-finnhub-setup.md  task-7-2-feeder-logic.md  task-7-3-scaling-sync.md  ui-docs-update.md  ui-phase-2-foundation.md  ui-phase-3-components.md  ui-phase-4-integration.md  ui-task-1-1-setup.md  ui-task-1-2-decoder.md  ui-task-1-3-broadcaster.md  ui-task-1-4-ingress.md
Plan/Platform/: 00-master-architecture-and-roadmap.md  01-task-list.md  phase-0-foundation.md  phase-1-core-services.md  phase-2-market-data.md  phase-3-execution-core.md  phase-4-client-core.md  phase-5-equities-mvp.md  phase-6-options.md  phase-7-portfolio-settlement.md  phase-8-compliance-hardening.md  phase-9-scale-launch.md  task-0-1-monorepo.md  task-0-2-contracts.md  task-0-3-iac.md  task-0-4-cicd-gitops.md  task-0-5-mesh-zerotrust.md  task-0-6-observability.md  task-0-7-service-template.md
bridge/: decoder.py  feeder.py  main.py  requirements.txt  schemas.py  wire.py
bridge/tests/: test_wire.py
clients/: README.md
contracts/: README.md  WIRE_FORMAT.md  buf.gen.yaml  buf.yaml
contracts/proto/chronos/trading/v1/: types.proto
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  page.tsx
dashboard/src/app/compliance/: page.tsx
dashboard/src/app/options/: page.tsx
dashboard/src/components/: AccountSummary.tsx  CashCurve.tsx  DepthChart.tsx  GreeksPanel.tsx  OpenOrders.tsx  OptionsChain.tsx  OrderBook.tsx  OrderEntry.tsx  Positions.tsx  PriceChart.tsx  PriceLadder.tsx  SpreadBuilder.tsx  Toaster.tsx  TradeTape.tsx  Watchlist.tsx
dashboard/src/lib/: api.ts  scaling.ts
dashboard/src/store/: useTradeStore.ts
deploy/: README.md
deploy/compose/: docker-compose.yml
include/chronos/: audit_logger.hpp  event_publisher.hpp  latency_utils.hpp  limit_order_book.hpp  memory_pool.hpp  price_level.hpp  risk_engine.hpp  sharded_matching_engine.hpp  strong_type.hpp  thread_utils.hpp  types.hpp  zmq_gateway.hpp
infra/: README.md
libs/: README.md
libs/client-core/include/chronos/client/: wire.hpp
services/: README.md
services/api/: Dockerfile  __init__.py  app.py  config.py  metrics.py  ratelimit.py  server.py  web.py
services/api/tests/: test_app.py  test_http.py
services/core/: __init__.py  alerts.py  corporate_actions.py  event_bus.py  ledger.py  market_data.py  matching.py  money.py  ohlc.py  oms.py  persistence.py  portfolio.py  pricing.py  reference_data.py  risk.py  statements.py  surveillance.py  trades.py
services/core/tests/: test_alerts.py  test_combo.py  test_corporate_actions.py  test_ledger.py  test_market_data.py  test_matching.py  test_ohlc.py  test_oms_integration.py  test_persistence.py  test_pricing.py  test_reference_data.py  test_statements.py  test_surveillance.py  test_trades.py
src/: main.cpp
tests/: CMakeLists.txt  benchmark_matching.cpp  test_audit.cpp  test_gateway.cpp  test_lob.cpp  test_main.cpp  test_main.h  test_matching.cpp  test_memory_pool.cpp  test_price_level.cpp  test_publication.cpp  test_risk.cpp  test_sharding.cpp  test_types.cpp  test_wire_codec.cpp
