add_executable(unit_tests test_main.cpp test_types.cpp test_memory_pool.cpp test_price_level.cpp test_lob.cpp test_matching.cpp test_gateway.cpp test_risk.cpp test_publication.cpp test_audit.cpp benchmark_matching.cpp test_sharding.cpp)
target_link_libraries(unit_tests GTest::gtest_main ${ZMQ_LIBRARIES})
if(ONNXRUNTIME_FOUND)
    target_link_libraries(unit_tests onnxruntime)
    target_compile_definitions(unit_tests PRIVATE HAS_ONNXRUNTIME)
endif()
target_link_directories(unit_tests PRIVATE ${ZMQ_LIBRARY_DIRS})
target_include_directories(unit_tests PRIVATE ../include ${ZMQ_INCLUDE_DIRS})
add_test(NAME CoreLogicTest COMMAND unit_tests)
add_test(NAME CoreTypesTest COMMAND unit_tests --gtest_filter=CoreTypesTest.*)
add_test(NAME MemoryPoolTest COMMAND unit_tests --gtest_filter=MemoryPoolTest.*)
add_test(NAME PriceLevelTest COMMAND unit_tests --gtest_filter=PriceLevelTest.*)
add_test(NAME LOBTest COMMAND unit_tests --gtest_filter=LOBTest.*)
add_test(NAME MatchingTest COMMAND unit_tests --gtest_filter=MatchingTest.*)
add_test(NAME ZmqGatewayTest COMMAND unit_tests --gtest_filter=ZmqGatewayTest.*)
add_test(NAME RiskEngineTest COMMAND unit_tests --gtest_filter=RiskEngineTest.*)
add_test(NAME PublicationTest COMMAND unit_tests --gtest_filter=PublicationTest.*)
add_test(NAME AuditLoggerTest COMMAND unit_tests --gtest_filter=AuditLoggerTest.*)
add_test(NAME MatchingBenchmark COMMAND unit_tests --gtest_filter=MatchingBenchmark.*)
add_test(NAME ShardingTest COMMAND unit_tests --gtest_filter=ShardingTest.*)